# gradescope-submit

./: .submit  Cargo.toml  out.html
src/: config.rs  main.rs
src/gradescope/: client.rs
