[package]
name = "gradescope-submit"
version = "0.1.0"
authors = ["Vinnie Caprarola <vinnie@vcaprarola.me>"]
edition = "2018"
description = "Program that submits files to Gradescope from the command-line"
license = "MIT"
repository = "https://github.com/vcapra1/gradescope-submit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { git = "https://github.com/vcapra1/reqwest", branch="add-cookie", version = "0.10.8", features = ["blocking", "cookies", "json"] }
rpassword = "0.4"
scraper = "0.12"
urlencoding = "1.1"
toml = "0.5"
serde = "1.0"
dirs = "3.0"
serde_json = "1.0"
